# CrystalScatter

./: .gitignore  Dockerfile  README.md  docker-compose.yml
Documentation/: SasScatter2-DockerInfos.tex  SasScatter2-Internals.tex  SasScatter2-Userdoc.tex  Vitess-Sphere.csv  Vitess-Sphere.dat.nofit  Vitess-Sphere.ini  Vitess-Sphere.txt
Mcp/: testmcp.py  testmcppar.txt
Source/: debughandler.h  dlgconfigautofit.cpp  dlgconfigautofit.h  dlgconfigautofit.ui  dlggeneratecombinations.cpp  dlggeneratecombinations.h  dlggeneratecombinations.ui  dlghdfselection.cpp  dlghdfselection.h  dlgtimetests.cpp  dlgtimetests.h  dlgtimetests.ui  docker-1-compile.bat  docker-2-generate.bat  docker-3-runHelp.bat  docker-4-runCalc.bat  myguiparam.cpp  myguiparam.h  sas_scatter2.pri  sas_scatter2.pro  sas_scatter2Cons.pro  sc_calc.cpp  sc_calc.h  sc_calcCons.cpp  sc_calcCons.h  sc_calc_generic.cpp  sc_calc_generic.h  sc_calc_generic_cpu.cpp  sc_calc_generic_gpu.cu  sc_calc_generic_gpu.h  sc_calcgui.cpp  sc_calcgui.h  sc_globalConfig.h  sc_gpu_generic.h  sc_gpu_pCub_lNon_oIso.h  sc_gpu_pCyl_lNon_oGau.h  sc_gpu_pCyl_lNon_oZDi.h  sc_gpu_pCyl_pGau_lBCT_oZDi.h  sc_gpu_pSph_lNon_oIso.h  sc_gpu_pSph_pGau_lFCC_oGau.h  (+34 more)
crystal_scatter_mcp/: pyproject.toml
crystal_scatter_mcp/client/: mcp_client.py
crystal_scatter_mcp/server/: mcp_server.py
